--- a/fluentd/norel-values.yaml
+++ b/fluentd/norel-values.yaml
@@ -1,6 +1,111 @@
+nameOverride: ""
+fullnameOverride: ""
+kind: "DaemonSet"
+image:
+  repository: "fluent/fluentd-kubernetes-daemonset"
+  pullPolicy: "IfNotPresent"
+  tag: ""
+imagePullSecrets: []
+serviceAccount:
+  create: true
+  annotations: {}
+  name: null
+rbac:
+  create: true
+podSecurityPolicy:
+  enabled: true
+  annotations: {}
+podSecurityContext: {}
+securityContext: {}
+lifecycle: {}
+livenessProbe:
+  httpGet:
+    path: /metrics
+    port: metrics
+readinessProbe:
+  httpGet:
+    path: /metrics
+    port: metrics
+resources: {}
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
+  customRules: []
+nodeSelector: {}
+tolerations: []
+affinity: {}
+annotations: {}
+labels: {}
+podAnnotations: {}
+podLabels: {}
+minReadySeconds:
+terminationGracePeriodSeconds:
+updateStrategy: {}
+env:
+- name: "FLUENTD_CONF"
+  value: "../../../etc/fluent/fluent.conf"
+envFrom: []
+initContainers: []
+volumes:
+- name: varlog
+  hostPath:
+    path: /var/log
+- name: varlibdockercontainers
+  hostPath:
+    path: /var/lib/docker/containers
+- name: etcfluentd-main
+  configMap:
+    name: fluentd-main
+    defaultMode: 0777
+- name: etcfluentd-config
+  configMap:
+    name: fluentd-config
+    defaultMode: 0777
+volumeMounts:
+- name: varlog
+  mountPath: /var/log
+- name: varlibdockercontainers
+  mountPath: /var/lib/docker/containers
+  readOnly: true
+- name: etcfluentd-main
+  mountPath: /etc/fluent
+- name: etcfluentd-config
+  mountPath: /etc/fluent/config.d/
+persistence:
+  enabled: false
+  storageClass: ""
+  accessMode: ReadWriteOnce
+  size: 10Gi
+service:
+  type: "ClusterIP"
+  annotations: {}
+  ports: []
+metrics:
+  serviceMonitor:
+    enabled: false
+    additionalLabels:
+      release: prometheus-operator
+    namespace: ""
+    namespaceSelector: {}
+    metricRelabelings: []
+    relabelings: []
+  prometheusRule:
+    enabled: false
+    additionalLabels: {}
+    namespace: ""
+    rules: []
+dashboards:
+  enabled: "true"
+  namespace: ""
+  labels:
+    grafana_dashboard: '"1"'
+plugins: []
+configMapConfigs:
+  - fluentd-prometheus-conf
 fileConfigs:
   01_sources.conf: |-
-    ## logs from podman
     <source>
       @type tail
       @id in_tail_container_logs
@@ -27,19 +132,12 @@ fileConfigs:
       </parse>
       emit_unmatched_lines true
     </source>
-
   02_filters.conf: |-
     <label @KUBERNETES>
       <match kubernetes.var.log.containers.fluentd**>
         @type relabel
         @label @FLUENT_LOG
       </match>
-
-      # <match kubernetes.var.log.containers.**_kube-system_**>
-      #   @type null
-      #   @id ignore_kube_system_logs
-      # </match>
-
       <filter kubernetes.**>
         @type kubernetes_metadata
         @id filter_kube_metadata
@@ -48,13 +146,11 @@ fileConfigs:
         skip_namespace_metadata true
         skip_master_url true
       </filter>
-
       <match **>
         @type relabel
         @label @DISPATCH
       </match>
     </label>
-
   03_dispatch.conf: |-
     <label @DISPATCH>
       <filter **>
@@ -69,13 +165,11 @@ fileConfigs:
           </labels>
         </metric>
       </filter>
-
       <match **>
         @type relabel
         @label @OUTPUT
       </match>
     </label>
-
   04_outputs.conf: |-
     <label @OUTPUT>
       <match **>
@@ -87,19 +181,3 @@ fileConfigs:
         password changeme
       </match>
     </label>
-
-dashboards:
-  enabled: "false"
-  namespace: ""
-  labels:
-    grafana_dashboard: '"1"'    
-
-env:  
-  # - name: "FLUENTD_CONF"
-  #   value: "../../../etc/fluent/fluent.conf"
-  - name: FLUENT_ELASTICSEARCH_HOST
-    value: "elasticsearch-master"
-  - name: FLUENT_ELASTICSEARCH_PORT
-    value: "9200"
-
-
