--- a/fluentd/templates/files.conf/systemd.yaml
+++ b/fluentd/templates/files.conf/systemd.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   labels:
     {{- include "fluentd.labels" . | nindent 4 }}
-  name: fluentd-systemd-conf-{{ include "fluentd.shortReleaseName" . }}
+  name: fluentd-systemd-conf
 data:
   systemd.conf: |-
     <source>
