--- a/fluentd/templates/podsecuritypolicy.yaml
+++ b/fluentd/templates/podsecuritypolicy.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.podSecurityPolicy.enabled (semverCompare "<1.25-0" .Capabilities.KubeVersion.GitVersion) -}}
+{{- if .Values.podSecurityPolicy.enabled }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
@@ -25,7 +25,7 @@ spec:
     - 'persistentVolumeClaim'
     {{- end }}
   runAsUser:
-    rule: 'RunAsAny'
+    rule: 'RunAsAny'    
   seLinux:
     rule: 'RunAsAny'
   supplementalGroups:
