--- a/fluentd/values.yaml
+++ b/fluentd/values.yaml
@@ -3,8 +3,7 @@ fullnameOverride: ""
 
 # DaemonSet, Deployment or StatefulSet
 kind: "DaemonSet"
-# azureblob, cloudwatch, elasticsearch7, elasticsearch8, gcs, graylog , kafka, kafka2, kinesis, opensearch
-variant: elasticsearch7
+
 # # Only applicable for Deployment or StatefulSet
 # replicaCount: 1
 
@@ -25,9 +24,8 @@ serviceAccount:
 rbac:
   create: true
 
-# from Kubernetes 1.25, PSP is deprecated
-# See: https://kubernetes.io/blog/2022/08/23/kubernetes-v1-25-release/#pod-security-changes
-# We automatically disable PSP if Kubernetes version is 1.25 or higher
+# Configure podsecuritypolicy
+# Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/
 podSecurityPolicy:
   enabled: true
   annotations: {}
@@ -162,9 +160,9 @@ updateStrategy: {}
 #     maxUnavailable: 1
 
 ## Additional environment variables to set for fluentd pods
-env: []
-  # - name: "FLUENTD_CONF"
-  #   value: "../../../etc/fluent/fluent.conf"
+env:
+- name: "FLUENTD_CONF"
+  value: "../../../etc/fluent/fluent.conf"
   # - name: FLUENT_ELASTICSEARCH_HOST
   #   value: "elasticsearch-master"
   # - name: FLUENT_ELASTICSEARCH_PORT
@@ -174,19 +172,32 @@ envFrom: []
 
 initContainers: []
 
-## Name of the configMap containing a custom fluentd.conf configuration file to use instead of the default.
-# mainConfigMapNameOverride: ""
+volumes:
+- name: varlog
+  hostPath:
+    path: /var/log
+- name: varlibdockercontainers
+  hostPath:
+    path: /var/lib/docker/containers
+- name: etcfluentd-main
+  configMap:
+    name: fluentd-main
+    defaultMode: 0777
+- name: etcfluentd-config
+  configMap:
+    name: fluentd-config
+    defaultMode: 0777
 
-## Name of the configMap containing files to be placed under /etc/fluent/config.d/
-## NOTE: This will replace ALL default files in the aforementioned path!
-# extraFilesConfigMapNameOverride: ""
-
-mountVarLogDirectory: true
-mountDockerContainersDirectory: true
-
-volumes: []
-
-volumeMounts: []
+volumeMounts:
+- name: varlog
+  mountPath: /var/log
+- name: varlibdockercontainers
+  mountPath: /var/lib/docker/containers
+  readOnly: true
+- name: etcfluentd-main
+  mountPath: /etc/fluent
+- name: etcfluentd-config
+  mountPath: /etc/fluent/config.d/
 
 ## Only available if kind is StatefulSet
 ## Fluentd persistence
@@ -200,7 +211,6 @@ persistence:
 ## Fluentd service
 ##
 service:
-  enabled: true
   type: "ClusterIP"
   annotations: {}
   # loadBalancerIP:
@@ -282,9 +292,9 @@ plugins: []
 
 ## Add fluentd config files from K8s configMaps
 ##
-configMapConfigs: []
-#  - fluentd-prometheus-conf
-#  - fluentd-systemd-conf
+configMapConfigs:
+  - fluentd-prometheus-conf
+# - fluentd-systemd-conf
 
 ## Fluentd configurations:
 ##
@@ -377,17 +387,3 @@ fileConfigs:
         password changeme
       </match>
     </label>
-
-ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    # - host: fluentd.example.tld
-    - port: 9880
-
-  tls: []
-  # - secretName: fluentd-tls
-  #   hosts:
-  #     - fluentd.example.tld
